Split friends and settings, restructure environment objects
